# tlmpy

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  goal.md  pyproject.toml
benchmarks/: analytical_travel_time.py  benchmark_wave2d.py  boundary_coefficient_sweep.py  boundary_corner_behaviour.py  boundary_oblique_path.py  boundary_reflection.py  boundary_reflection_magnitude.py  dispersion_characterisation.py  dispersion_wavelength_sweep.py  koay2008_gaussian_tlm_diffusion.py
docs/: ai_usage_disclosure.md  benchmarking.md  boundary_characterisation.md  dispersion_characterisation.md  example_gallery.md  getting_started.md  index.md  numerical_methods.md  project_status.md  publication_readiness.md  reference_inventory.md  roadmap.md  validation.md  validation_checklist.md
examples/: 01_scalar_wave_pulse.py  02_scalar_wave_obstacle.py  03_thermal_diffusion_slab.py  04_gpu_benchmark.py  README.md  gallery.md
paper/: paper.bib  paper.md
tests/: test_analytical_travel_time_benchmark.py  test_backend.py  test_benchmark_results.py  test_boundary_coefficient_sweep_benchmark.py  test_boundary_corner_behaviour_benchmark.py  test_boundary_oblique_path_benchmark.py  test_boundary_reflection_benchmark.py  test_boundary_reflection_magnitude_benchmark.py  test_cli.py  test_cupy_optional.py  test_diffusion_2d.py  test_diffusion_analytical.py  test_dispersion_characterisation_benchmark.py  test_dispersion_wavelength_sweep_benchmark.py  test_experimental_parabolic_tlm.py  test_grid.py  test_imports.py  (+7 more)
(+34 files in other folders)
